# mailme

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac
po/: POTFILES.in  fi.po
src/: Makefile.am  mailme.c
